# test_python_dev_Hammer_Systems

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: basic_code_checker.yaml
app/: pytest.ini
app/api/v1/: serializers.py  urls.py  views.py
app/config/: celery.py  settings.py  urls.py
app/referrals/: admin.py  models.py  referral_services.py
app/referrals/migrations/: 0001_initial.py  0002_initial.py
app/referrals/tests/: __init__.py  test_models.py  test_services.py
app/users/: admin.py  models.py  tasks.py  user_services.py
app/users/migrations/: 0001_initial.py  0002_rename_referral_code_list_user_referral_users_list.py
app/users/tests/: test_models.py  test_services.py
code_checkers/: .flake8  .style.yapf  bandit.yaml
env/: .env.example
nginx/: Dockerfile  nginx.conf
nginx/conf.d/: nginx.conf
readme/: v2.1.ReferralApiTest.postman_collection.json  v2.ReferralApiTest.postman_collection.json  Тестовое задание для Python разработчика-2.docx
